Got combined batching fixed. All tests working